Lang_46/evosuite/original/evosuite-report-org/test_build.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Lang_46_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:target/classes/  /home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/0/org/apache/commons/lang/StringEscapeUtils_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/0/org/apache/commons/lang/StringEscapeUtils_ESTest_scaffolding.java >> evosuite-report-org/test_build.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/0/org/apache/commons/lang/StringEscapeUtils_ESTest.java:328: error: cannot find symbol
      String string0 = StringEscapeUtils.escapeCsv("qAZwzS>v+xDu/\"g8");
                                        ^
  symbol:   method escapeCsv(String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/0/org/apache/commons/lang/StringEscapeUtils_ESTest.java:334: error: cannot find symbol
      String string0 = StringEscapeUtils.escapeCsv((String) null);
                                        ^
  symbol:   method escapeCsv(String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/0/org/apache/commons/lang/StringEscapeUtils_ESTest.java:341: error: cannot find symbol
      StringEscapeUtils.escapeCsv((Writer) stringWriter0, (String) null);
                       ^
  symbol:   method escapeCsv(Writer,String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/0/org/apache/commons/lang/StringEscapeUtils_ESTest.java:349: error: cannot find symbol
        StringEscapeUtils.escapeCsv((Writer) null, "M");
                         ^
  symbol:   method escapeCsv(Writer,String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/0/org/apache/commons/lang/StringEscapeUtils_ESTest.java:362: error: cannot find symbol
      String string0 = StringEscapeUtils.unescapeCsv("\"qAZwzS>v+xDu/\"\"g8\"");
                                        ^
  symbol:   method unescapeCsv(String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/0/org/apache/commons/lang/StringEscapeUtils_ESTest.java:369: error: cannot find symbol
      String string0 = StringEscapeUtils.unescapeCsv((String) null);
                                        ^
  symbol:   method unescapeCsv(String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/0/org/apache/commons/lang/StringEscapeUtils_ESTest.java:376: error: cannot find symbol
      StringEscapeUtils.unescapeCsv((Writer) stringWriter0, (String) null);
                       ^
  symbol:   method unescapeCsv(Writer,String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/0/org/apache/commons/lang/StringEscapeUtils_ESTest.java:382: error: cannot find symbol
      String string0 = StringEscapeUtils.unescapeCsv("");
                                        ^
  symbol:   method unescapeCsv(String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/0/org/apache/commons/lang/StringEscapeUtils_ESTest.java:388: error: cannot find symbol
      String string0 = StringEscapeUtils.unescapeCsv("E#`");
                                        ^
  symbol:   method unescapeCsv(String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/0/org/apache/commons/lang/StringEscapeUtils_ESTest.java:394: error: cannot find symbol
      String string0 = StringEscapeUtils.unescapeCsv("\"7f8A");
                                        ^
  symbol:   method unescapeCsv(String)
  location: class StringEscapeUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_46/Lang/evosuite/0/org/apache/commons/lang/StringEscapeUtils_ESTest.java:401: error: cannot find symbol
      StringEscapeUtils.unescapeCsv((Writer) stringWriter0, "\"WR0|t~)!fp57wI`c$\"");
                       ^
  symbol:   method unescapeCsv(Writer,String)
  location: class StringEscapeUtils
11 errors
